<resources>
    <string name="app_name">明日之诗</string>
    <string name="tab_home">主页</string>
    <string name="tab_gift">抽卡</string>
    <string name="tab_book">藏诗阁</string>
    <string name="tab_user">我的</string>
    <string name="note">注释</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  CardFragment  -->
    <string name="star_collection">收集度</string>
    <string name="card_deleted">取消</string>

    <!-- GiftFragment -->
    <string name="gift_title">请抽取一张卡片</string>
    <string name="gift_button">就决定是你了！</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--  SearchActivity  -->
    <string name="search_sure">搜索</string>

    <!--  SearchResultActivity  -->
    <string name="searchTitle">题目</string>
    <string name="searchAuthor">诗人</string>

    <!--  BookActivity  -->
    <string name="bookActivity">藏诗阁</string>

    <!--  UserActivity  -->
    <string name="userName">猫叫ing</string>
    <string name="changeName">修改昵称</string>
    <string name="shareAPP">分享APP</string>
    <string name="feedback">意见与反馈</string>
    <string name="supportUs">支持我们</string>
    <string name="deleteName">注销账号</string>
    <string name="logout">退出登录</string>
</resources>