<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity"
    android:background="@color/main_bgc" >

    <RelativeLayout
        android:id="@+id/ReativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/profile"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_centerVertical="true"
            android:text="@string/userName"
            android:textStyle="bold"
            android:textColor="@color/main_text"
            android:textSize="26sp" />
        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#33000000"
            android:layout_marginTop="50dp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/ReativeLayout1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/write" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            android:text="@string/changeName"
            android:textColor="@color/main_text"
            android:textSize="20sp" />
    </LinearLayout>



    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#33000000"
        android:layout_marginTop="1dp"
        android:layout_below="@id/button1"/>

    <LinearLayout
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/line2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/share" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/shareAPP"
            android:textColor="@color/main_text"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#33000000"
        android:layout_marginTop="1dp"
        android:layout_below="@id/button2"/>

    <LinearLayout
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/line3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/suggestion" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            android:text="@string/feedback"
            android:textColor="@color/main_text"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#33000000"
        android:layout_marginTop="1dp"
        android:layout_below="@id/button3"/>

    <LinearLayout
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/line4">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/support" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            android:text="@string/supportUs"
            android:textColor="@color/main_text"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#33000000"
        android:layout_marginTop="1dp"
        android:layout_below="@id/button4"/>

    <LinearLayout
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/line5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/cut" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            android:text="@string/deleteName"
            android:textColor="@color/main_text"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#33000000"
        android:layout_marginTop="1dp"
        android:layout_below="@id/button5"/>

    <FrameLayout
        android:id="@+id/tabbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    </FrameLayout>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tabbar_fragment"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/logout"
        android:textSize="18sp"
        />

</RelativeLayout>